04.ingree-demo/tls-demo-ingress/demo1-tls/nginx-tls-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-tls-test
  namespace: web-demo

spec:
  tls:
  - hosts:
    - www.hujianli.cn
    secretName: nginx-https

  rules:
  - host: www.hujianli.cn
    http:
      paths: /
      - backend:
          serviceName: nginx-tls
          servicePort: 80
